Add Vizra ADK integration and CustomerSupportAgent
Integrates the Vizra Agent Development Kit (ADK) by adding the vizra/vizra-adk package and related dependencies. Introduces a new CustomerSupportAgent class, configuration file, and prompt template. Adds database migrations for agent sessions, messages, memories, prompt versioning, prompt usage, trace spans, and vector memories to support agent functionality and advanced features like prompt versioning, tracing, and vector memory.

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "prism-php/prism": "^0.83.2",
-        "tightenco/ziggy": "^2.4"
+        "prism-php/prism": "^0.60.0",
+        "tightenco/ziggy": "^2.4",
+        "vizra/vizra-adk": "^0.0.17"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
